--- a/assets/style.css
+++ b/assets/style.css
@@ -23,3 +23,10 @@
     width: 100px; /* width of the spinner gif */
     height: 100px; /*hight of the spinner gif +2px to fix IE8 issue */
 }
+
+.big-dummy-background 
+{
+    background-color: rgba(255 , 255 , 255 , 0);
+    width: 100%;
+    height: 100%;
+}
